--- a/Exercicios/Calculadora2/package.json
+++ b/Exercicios/Calculadora2/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "calculadora",
+  "name": "calculadora2",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "express": "^5.1.0"
+  },
   "devDependencies": {
-    "jest": "^30.1.1"
+    "jest": "^30.1.3",
+    "nodemon": "^3.1.10",
+    "supertest": "^7.1.4"
   }
 }
