--- a/.gitignore
+++ b/.gitignore
@@ -273,4 +273,6 @@ gradle-app.setting
 .history
 .ionide
 
+
+.env
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,reactnative
